# RoboMaster-Playground

./: .gitignore  INSTALL.md  README.md  connect.py  pyproject.toml  robotrack.py  run_track.py  sim_chassis.py  simu.py  simulate_track.py  test_chassis.py  test_connection.py  video-cap.py
VLA-research/: LeRobot_Integration.md  lrrecord.md
basic_simu/: anim.py  robotrack.py  sim_chassis.py  simulate_track.py  test_vector.py  vector.py
cli/: __init__.py  config.py  connection.py  control_config.py  drive.py  info.py  joystick.py  led.py  lerobot_recorder.py  recorder.py  telemetry.py  video.py
driver/: __init__.py  recording.py  robot_driver.py  sdk_driver.py  simulation.py
old/: circle.py  mecanum.py  video-cap.py
